# QK-LPA100A

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  cliff.toml  index.html  releases.json  style.css
.github/workflows/: build-macos.yml  release.yml
resources/: QK-LP100A.entitlements
src/: Style.h  main.cpp
src/core/: HamlibClient.cpp  HamlibClient.h  HamlibRig.cpp  HamlibRig.h  ITransport.h  LP100AProtocol.cpp  LP100AProtocol.h  SerialTransport.cpp  SerialTransport.h  TcpTransport.cpp  TcpTransport.h
src/plot/: PlotWidget.cpp  PlotWidget.h  SmithChartWidget.cpp  SmithChartWidget.h  SweepData.cpp  SweepData.h  SweepEngine.cpp  SweepEngine.h
src/resources/: Info.plist.in
src/resources/icons/: AppIcon.icns
src/vcp/: ConnectionDialog.cpp  ConnectionDialog.h  PowerGauge.cpp  PowerGauge.h  RigSetupDialog.cpp  RigSetupDialog.h  SWRGauge.cpp  SWRGauge.h  VCPMainWindow.cpp  VCPMainWindow.h
